Add:connect genetic and gan music with the front

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,17 +49,16 @@
         <div class="container pt-3">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-5">
-              <h2>Build website using MDB</h2>
+              <h2>Porque a todos nos gusta la música</h2>
   
               <p>
-                It's crafted with the latest trend of design & coded with all
-                modern approaches. It's a robust & multi-dimensional usable
-                template.
+                Miausic te permité crear música con restricciones teóricas como: 
+                BPM, definir escalas, instrumentos y mucho más...
               </p>
   
-              <button type="button" class="btn btn-outline-success btn-lg">
+              <a href="/crear" type="button" class="btn btn-outline-success btn-lg">
                 Crear
-              </button>
+              </a>
             </div>
             <div class="col-md-5">
                 <img src="static/img/logo.png" alt="Miaμsic"/>
@@ -81,7 +80,7 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-md-5">
 
-              <h1>We code.</h1>
+              <h1>Eres un entusiasta de la música</h1>
   
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
