--- a/templates/pista.html
+++ b/templates/pista.html
@@ -46,6 +46,23 @@
         </div>
       </nav>
      
+      <div class="card h-100 w-75 mx-auto m-3">
+        <embed src="../static/results/res.pdf" class="card-img-top h-75 w-100" 
+               type="application/pdf">
+        <div class="card-body">
+          <p class="card-text">
+            <audio controls class="w-100">
+              <source src="../static/results/res.wav" type="audio/mpeg">
+             Your browser does not support the audio element.
+            </audio>
+          </p>
+        </div>
+        <div class="card-body">
+          <a href="../static/results/res.wav" class="btn btn-outline-dark" style="width:49%;">Descargar wav</a>
+          <a href="../static/results/res.mid" class="btn btn-dark" style="width:49%;">Descargar midi</a>
+        </div>
+      </div>
+
       <footer class="gradient">
         <div class="container-fluid text-center">
             <span>Hecho con ❤️
