--- a/templates/index.html
+++ b/templates/index.html
@@ -83,30 +83,29 @@
               <h1>Eres un entusiasta de la música</h1>
   
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Delectus, tempore placeat corrupti enim, cumque ex? Mollitia nihil
-                sint cumque omnis iure nisi.
+                Diviértete creando música, no importa si solo tienes nociones básicas de música,
+                miusic te permitirá crear piezas sin dificultad, puedes jugar con las reestricciones 
+                hasta crear tu pieza ideal.
               </p>
             </div>
             <div class="col-md-5"><img src="static/img/coding_.svg" alt="" /></div>
             <div class="col-md-5"><img src="static/img/marketing.svg" alt="" /></div>
             <div class="col-md-5">
 
-              <h1>We promote.</h1>
+              <h1>Eres un profesional de la música</h1>
   
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Delectus, tempore placeat corrupti enim, cumque ex? Mollitia nihil
-                sint cumque omnis iure nisi.
+                ¿Eres un música experimentado que necesita inspiración para empezar a componer?
+                Miausic te permite definir una nota y una escala para inicar el proceso, así
+                como otras reglas teorícas.
               </p>
             </div>
             <div class="col-md-5">
-              <h1>We sell.</h1>
+              <h1>Música sin preocuparte por derechos de autor?</h1>
   
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Delectus, tempore placeat corrupti enim, cumque ex? Mollitia nihil
-                sint cumque omnis iure nisi.
+                Eres creador de contenido y tienes problemas con los derechoss de 
+                autor al poner música en tuss videos, con miausic esto dejará de ser un problema,
               </p>
             </div>
             <div class="col-md-5"><img src="static/img/email.svg" alt="" /></div>
